// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DatePicker ManualEntryForm should not show precision when rounding is disabled 1`] = `
<Form
  className="DateFields"
  id="datepicker-manualentry-form"
  onKeyDown={[MockFunction]}
>
  <Grid
    middle="xs"
  >
    <Grid.Column>
      <TextField
        id="fromDate"
        label="fromDate"
        labelHidden={true}
        name="fromDate"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="1970-01-20"
        value="2018-01-10"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        id="fromTime"
        label="fromTime"
        labelHidden={true}
        name="fromTime"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="12:00am"
        value="11:00am"
      />
    </Grid.Column>
    <Grid.Column
      xs={1}
    >
      <div
        className="ArrowWrapper"
      >
        <ArrowForward />
      </div>
    </Grid.Column>
    <Grid.Column>
      <TextField
        id="toDate"
        label="toDate"
        labelHidden={true}
        name="toDate"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="1970-01-20"
        value="2018-01-15"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        id="toTime"
        label="toTime"
        labelHidden={true}
        name="toTime"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="12:00am"
        value="11:00am"
      />
    </Grid.Column>
  </Grid>
</Form>
`;

exports[`Component: DatePicker ManualEntryForm should render correctly by default 1`] = `
<Form
  className="DateFields"
  id="datepicker-manualentry-form"
  onKeyDown={[Function]}
>
  <Grid
    middle="xs"
  >
    <Grid.Column>
      <TextField
        id="fromDate"
        label="fromDate"
        labelHidden={true}
        name="fromDate"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="1970-01-20"
        value="2018-01-10"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        disabled={true}
        id="fromTime"
        label="fromTime"
        labelHidden={true}
        name="fromTime"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="12:00am"
        value="11:00am"
      />
    </Grid.Column>
    <Grid.Column
      xs={1}
    >
      <div
        className="ArrowWrapper"
      >
        <ArrowForward />
      </div>
    </Grid.Column>
    <Grid.Column>
      <TextField
        id="toDate"
        label="toDate"
        labelHidden={true}
        name="toDate"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="1970-01-20"
        value="2018-01-15"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        disabled={true}
        id="toTime"
        label="toTime"
        labelHidden={true}
        name="toTime"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="12:00am"
        value="11:00am"
      />
    </Grid.Column>
  </Grid>
  <div
    className="PrecisionLabel"
  >
    <TranslatableText>
      Precision: 
    </TranslatableText>
    Hour
  </div>
</Form>
`;

exports[`Component: DatePicker ManualEntryForm should sync props to state 1`] = `
<Form
  className="DateFields"
  id="datepicker-manualentry-form"
  onKeyDown={[MockFunction]}
>
  <Grid
    middle="xs"
  >
    <Grid.Column>
      <TextField
        id="fromDate"
        label="fromDate"
        labelHidden={true}
        name="fromDate"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="1970-01-20"
        value="2018-01-10"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        disabled={true}
        id="fromTime"
        label="fromTime"
        labelHidden={true}
        name="fromTime"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="12:00am"
        value="10:00am"
      />
    </Grid.Column>
    <Grid.Column
      xs={1}
    >
      <div
        className="ArrowWrapper"
      >
        <ArrowForward />
      </div>
    </Grid.Column>
    <Grid.Column>
      <TextField
        id="toDate"
        label="toDate"
        labelHidden={true}
        name="toDate"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="1970-01-20"
        value="2018-01-15"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        disabled={true}
        id="toTime"
        label="toTime"
        labelHidden={true}
        name="toTime"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="12:00am"
        value="2:00pm"
      />
    </Grid.Column>
  </Grid>
  <div
    className="PrecisionLabel"
  >
    <TranslatableText>
      Precision: 
    </TranslatableText>
    Hour
  </div>
</Form>
`;

exports[`Component: DatePicker ManualEntryForm should update state from new props 1`] = `
<Form
  className="DateFields"
  id="datepicker-manualentry-form"
  onKeyDown={[MockFunction]}
>
  <Grid
    middle="xs"
  >
    <Grid.Column>
      <TextField
        id="fromDate"
        label="fromDate"
        labelHidden={true}
        name="fromDate"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="1970-01-20"
        value="2018-01-10"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        disabled={true}
        id="fromTime"
        label="fromTime"
        labelHidden={true}
        name="fromTime"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="12:00am"
        value="10:00am"
      />
    </Grid.Column>
    <Grid.Column
      xs={1}
    >
      <div
        className="ArrowWrapper"
      >
        <ArrowForward />
      </div>
    </Grid.Column>
    <Grid.Column>
      <TextField
        id="toDate"
        label="toDate"
        labelHidden={true}
        name="toDate"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="1970-01-20"
        value="2018-01-15"
      />
    </Grid.Column>
    <Grid.Column>
      <TextField
        disabled={true}
        id="toTime"
        label="toTime"
        labelHidden={true}
        name="toTime"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="12:00am"
        value="2:00pm"
      />
    </Grid.Column>
  </Grid>
  <div
    className="PrecisionLabel"
  >
    <TranslatableText>
      Precision: 
    </TranslatableText>
    Hour
  </div>
</Form>
`;
